--- a/src/css/index.css
+++ b/src/css/index.css
@@ -63,6 +63,11 @@ a:hover {
 	right: 8px;
 }
 
+.osmcat-sharebutton {
+	bottom: 30px;
+	right: 44px;
+}
+
 .osmcat-menu{
 	display: flex;
 	flex-wrap: wrap;
